--- a/lms/views/display.ejs
+++ b/lms/views/display.ejs
@@ -13,7 +13,7 @@
 <body>
    
     <div class="min-h-screen bg-gray-100 p-8">
-       
+        <%- include("notifications.ejs") %>
         <div class="max-w-screen-xl mx-auto">
             <a href="/signout" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded">Sign Out</a>
             <a href="/change" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded">Change Password</a>
